--- a/TeduStore/.classpath
+++ b/TeduStore/.classpath
@@ -30,12 +30,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/LanLanS"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/LanLanAutoCreateS"/>
-	<classpathentry kind="lib" path="/home/soft01/lib/mapper-4.0.3.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -46,5 +40,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/lib/mapper-4.0.3.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/LanLanAutoCreateS"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
